@@ -1,4 +1,11 @@
+2008-09-30  Ross Burton  <ross@linux.intel.com>
+
+	* matchbox-panel/mb-panel.c:
+	Very basic implementation of _NET_WM_STRUTS, so that window
+	managers know where the panels are.
+
 2008-09-30  Samuel Ortiz  <sameo@linux.intel.com>
+	
 	* configure.ac
 	* applets/Makefile.am
 	* applets/battery/battery.h
